[gd_scene load_steps=8 format=3 uid="uid://bvgaw3tfxgdbq"]

[ext_resource type="Script" uid="uid://mamdggy3py63" path="res://testes/on_off_ground.gd" id="1_1yce1"]
[ext_resource type="Texture2D" uid="uid://33ri277wn0iu" path="res://icon.svg" id="1_28icx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_28icx"]
size = Vector2(160, 16)

[sub_resource type="Animation" id="Animation_1yce1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.25658363, 0.63532215, 1.1551381e-06, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:collision_layer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_yho28"]
resource_name = "off"
length = 0.083341666
step = 0.083333336
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.98, 0, 0.40833318, 0.23529412)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:collision_layer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_28icx"]
resource_name = "on"
length = 0.083341666
step = 0.083333336
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.25658363, 0.63532215, 1.1551381e-06, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:collision_layer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yho28"]
_data = {
&"RESET": SubResource("Animation_1yce1"),
&"off": SubResource("Animation_yho28"),
&"on": SubResource("Animation_28icx")
}

[node name="on_off_ground" type="StaticBody2D"]
collision_layer = 4
script = ExtResource("1_1yce1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(80, 8)
shape = SubResource("RectangleShape2D_28icx")
debug_color = Color(0.7743343, 0.441298, 0.058794983, 0.41960785)

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.25658363, 0.63532215, 1.1551381e-06, 1)
position = Vector2(80, 8)
scale = Vector2(1.25, 0.125)
texture = ExtResource("1_28icx")

[node name="animation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_yho28")
}

[node name="on_timer" type="Timer" parent="."]
one_shot = true

[node name="off_timer" type="Timer" parent="."]
one_shot = true

[node name="player_inside" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_inside"]
visible = false
position = Vector2(80, 8)
shape = SubResource("RectangleShape2D_28icx")
debug_color = Color(0.7743343, 0.441298, 0.058794983, 0.41960785)

[connection signal="timeout" from="on_timer" to="." method="_on_on_timer_timeout"]
[connection signal="timeout" from="off_timer" to="." method="_on_off_timer_timeout"]
[connection signal="body_entered" from="player_inside" to="." method="_on_player_inside_body_entered"]
[connection signal="body_exited" from="player_inside" to="." method="_on_player_inside_body_exited"]
